# typeslib

./: .gitignore  CMakeLists.txt  README.md
idl/: Point.idl  Pose.idl  Quaternion.idl
